--- a/multiplayer.html
+++ b/multiplayer.html
@@ -553,7 +553,7 @@
         </div>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script>
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
@@ -565,7 +565,12 @@
         const gameOverElement = document.getElementById('gameOver');
         const connectionStatusElement = document.getElementById('connectionStatus');
 
+        const socketPath = (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1')
+            ? '/socket.io'
+            : '/api/socket';
+
         let socket = io({
+            path: socketPath,
             transports: ['websocket', 'polling'],
             timeout: 20000,
             forceNew: false,
